Fix: sidebar footer position when collapsed.

--- a/assets/css/scss/components/sidebar/_sidebar.scss
+++ b/assets/css/scss/components/sidebar/_sidebar.scss
@@ -130,7 +130,7 @@ html {
 }
 
 .tailor-sidebar__footer {
-	position: fixed;
+	position: absolute;
 	bottom: 0;
 	left: 0;
 	width: 300px;
