--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -598,7 +598,7 @@ html {
     box-shadow: none; }
 
 .tailor-sidebar__footer {
-  position: fixed;
+  position: absolute;
   bottom: 0;
   left: 0;
   width: 300px;
